--- a/index.html
+++ b/index.html
@@ -5,6 +5,18 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>LUMI – Fog Sphere</title>
 <style>
+  .header {
+  width: 100%;
+  text-align: center;
+  margin-top: 30px;
+  margin-bottom: 10px;
+}
+.logo {
+  max-width: 180px;
+  filter: brightness(1000%) invert(1); /* makes dark logo white */
+  opacity: 0.9;
+}
+
   html,body{margin:0;height:100%;background:#0a0f14;color:#eaf4ff;font-family:system-ui,Segoe UI,Roboto,Helvetica,Arial,sans-serif}
   .app{display:grid;grid-template-columns:minmax(340px,520px) 1fr;gap:24px;align-items:start;padding:24px;max-width:1200px;margin:0 auto}
   .stage{display:grid;place-items:center}
@@ -22,6 +34,10 @@
 </style>
 </head>
 <body>
+<!-- HEADER: Logo -->
+<header class="header">
+  <img src="LUMI Logo (1).png" alt="LUMI logo" class="logo" />
+</header>
 
 <div class="app">
   <!-- LEFT: Sphere + Mic -->
