--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ e<!doctype html>
 </head>
 <body>
 <header class="header">
-  <img src="./inverted-lumi-logo.png" alt="LUMI logo" class="logo" />
+  <img src="inverted-lumi-logo.png" alt="LUMI logo" class="logo" />
 </header>
 
 <div class="app">
