--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
-e<!doctype html>
+<!doctype html>
 <html lang="en">
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>LUMI – Fog Sphere</title>
-.header {
+<style>
+  .header {
   width: 100%;
   text-align: center;
   margin-top: 30px;
@@ -12,10 +13,10 @@ e<!doctype html>
 }
 .logo {
   max-width: 180px;
-  height: auto;
-  display: inline-block;
-  opacity: 0.95;
+  filter: brightness(1000%) invert(1); /* makes dark logo white */
+  opacity: 0.9;
 }
+
   html,body{margin:0;height:100%;background:#0a0f14;color:#eaf4ff;font-family:system-ui,Segoe UI,Roboto,Helvetica,Arial,sans-serif}
   .app{display:grid;grid-template-columns:minmax(340px,520px) 1fr;gap:24px;align-items:start;padding:24px;max-width:1200px;margin:0 auto}
   .stage{display:grid;place-items:center}
@@ -33,8 +34,9 @@ e<!doctype html>
 </style>
 </head>
 <body>
+<!-- HEADER: Logo -->
 <header class="header">
-  <img src="inverted-lumi-logo.png" alt="LUMI logo" class="logo" />
+  <img src="LUMI Logo (1).png" alt="LUMI logo" class="logo" />
 </header>
 
 <div class="app">
