--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <body>
 <!-- HEADER: Logo -->
 <header class="header">
-  <img src="inverted-lumi-logo.png" alt="LUMI logo" class="logo" />
+  <img src="dark-lumi-logo.png" alt="LUMI logo" class="logo" />
 </header>
 
 <div class="app">
