--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <body>
 <!-- HEADER: Logo -->
 <header class="header">
-  <img src="image (12).png" alt="LUMI logo" class="logo" />
+  <img src="logo.png" alt="LUMI logo" class="logo" />
 </header>
 
 <div class="app">
