--- a/index.html
+++ b/index.html
@@ -13,17 +13,16 @@
     margin-top: 30px;
     margin-bottom: 10px;
   }
-  .logo {
-    max-width: 260px;                 /* <-- larger size  */
-    height: auto;
-    display: inline-block;
-    opacity: 0.95;
-    filter:
-      brightness(2.8)
-      drop-shadow(0 0 18px rgba(130,180,255,0.6))
-      drop-shadow(0 0 35px rgba(140,120,255,0.4)); /* blue-purple glow */
-    margin-bottom: 10px;
-  }
+ .logo{
+  max-width: 300px;
+  height: auto;
+  display: inline-block;
+  opacity: .95;
+  filter:
+    brightness(3)
+    drop-shadow(0 0 25px rgba(120,200,255,1))
+    drop-shadow(0 0 60px rgba(160,120,255,.9));
+}
   html,body{margin:0;height:100%;background:#0a0f14;color:#eaf4ff;font-family:system-ui,Segoe UI,Roboto,Helvetica,Arial,sans-serif}
   .app{display:grid;grid-template-columns:minmax(340px,520px) 1fr;gap:24px;align-items:start;padding:24px;max-width:1200px;margin:0 auto}
   .stage{display:grid;place-items:center}
