--- a/index.html
+++ b/index.html
@@ -28,19 +28,37 @@
   .stage{display:grid;place-items:center}
   #fog{width:min(520px,90vw);height:min(520px,90vw);display:block;filter:drop-shadow(0 20px 60px rgba(124,211,255,.25))}
   .row{display:flex;align-items:center;gap:10px;justify-content:center;margin-top:10px}
-  button{background:#17324d;border:1px solid rgba(124,211,255,.45);color:#dff1ff;border-radius:12px;padding:12px 16px;cursor:pointer}
-  button[disabled]{opacity:.6;cursor:not-allowed}
-  /* --- Add this section --- */
+  /* Base buttons */
 button {
-  transition: all 0.25s ease;
+  background:#17324d;
+  border:1px solid rgba(124,211,255,.45);
+  color:#dff1ff;
+  border-radius:12px;
+  padding:12px 16px;
+  cursor:pointer;
+  transition: box-shadow .2s ease, border-color .2s ease, transform .2s ease, background-color .2s ease;
 }
-button:hover:not([disabled]) {
+button[disabled]{
+  opacity:.6;
+  cursor:not-allowed;
+}
+
+/* Hover / focus / active states */
+button:hover:not([disabled]),
+button:focus-visible:not([disabled]) {
   box-shadow:
-    0 0 10px rgba(130,180,255,0.7),
-    0 0 25px rgba(140,120,255,0.5);
-  border-color: rgba(150,200,255,0.8);
+    0 0 12px rgba(130,180,255,.75),
+    0 0 30px rgba(140,120,255,.55);
+  border-color: rgba(160,210,255,.9);
+  background: #1a3a5a;       /* slight brighten so you SEE the change */
   transform: translateY(-1px);
-  transition: all 0.2s ease;
+}
+
+button:active:not([disabled]) {
+  transform: translateY(0);
+  box-shadow:
+    0 0 8px rgba(130,180,255,.7),
+    0 0 18px rgba(140,120,255,.45);
 }
 /* --- End of new section --- */
   #status{opacity:.8}
